--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+server.port=8081
+server.servlet.context-path=/app
 
+value.name=Nando
+value.apellido=Bambague
+value.random=${random.value}
+
+user.email=test@mail.com
+user.password=1234
+user.age=26
+
+logging.level.root=debug
+logging.level.org.springframework.web=info
+logging.level.org.hibernate=error
+
+spring.jpa.show-sql=true
+
+#Conexión DataBase -> Tambien se puede hacer en la clase GeneralConfiguration
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.h2Dialect
